[package]
name = "substreams-eth-block-meta"
version = "0.5.0"
description = "Substream Ethereum Block Meta Substreams tracking block at day/month boundaries"
edition = "2021"
repository = "https://github.com/streamingfast/substreams-eth-block-meta"

[lib]
name = "substreams"
crate-type = ["cdylib"]

[dependencies]
anyhow = "1"
ethabi = "17"
num-bigint = "0.4"
prost = "0.11"
prost-types = "0.11"
substreams = "0.5"
substreams-ethereum = "0.9"

[build-dependencies]
anyhow = "1"
substreams-ethereum = "0.9"

[profile.release]
lto = true
opt-level = 's'
strip = "debuginfo"

